--- a/test/fixtures/restaurantes.yml
+++ b/test/fixtures/restaurantes.yml
@@ -9,3 +9,11 @@ one: {}
 #
 two: {}
 #  column: value
+
+fasano:
+  nome: Fasano
+  endereco: Rua Vergueiro
+
+fogo_de_chao:
+  nome: Fogo de Chao
+  endereco: Avenida dos Bandeirantes
